fixed navbar-collapse-icon not showing, fixed issue with brand name breaking on smaller devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -130,3 +130,9 @@ h1 {
 .social a {
   font-size: 3em;
 }
+
+@media (max-width: 991px) { 
+  .navbar-brand {
+    display: none;
+  }
+}
